<resources>
    <string name="app_name">qn1practical</string>
    <string name="school_logo">School Logo</string>
    <string name="student_name">Student name:</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="age">Age:</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="student_class">Student class:</string>
    <string name="enter_your_class">Enter your class</string>
    <string name="parent_contact">Parent contact:</string>
    <string name="enter_your_parent_contact">Enter your parent contact</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
</resources>